k8s/overlays/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth
spec:
  replicas: 2
  template:
    spec:
      serviceAccountName: auth-sa
      initContainers: []
      containers:
        - name: auth-service
          imagePullPolicy: Always
