k8s/overlays/local/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  type: ClusterIP
